...
    "计数类" : {

    },
    "让当前水平到达一个值，如减到 70kg" : {

    },
    "记一笔" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Expense"
          }
...
        }
      }
    },
    "课程" : {

    },
    "财务" : {

    },
    "财务理财" : {

    },
    "账号受限" : {
...
